# giffapp

./: README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml
src/: aerich.ini  main.py  pytest.ini
src/aiohttpdemo_polls/: data.py  main.py  models.py  settings.py  views.py
src/aiohttpdemo_polls/graphql/: mutation_resolvers.py  query_resolvers.py  subscription_resolvers.py
src/config/: settings.py
src/migrations/aiohttpdemo_polls/: 0_202015053020161525_init.json  old_models.py
src/tests/: conftest.py
src/tests/aiohttpdemo_polls/: test_foo.py
